# Denjhang_Music_Player_v16

./: CMakeLists.txt  README.md  build_v16.sh  imgui.ini
docs/: CHANGELOG_OPL.md  CHANGELOG_v14_OSCILLOSCOPE_REFACTOR.md  FEATURES.md  HOW_TO_ADD_OSCILLOSCOPE_FOR_NEW_CHIP.md  REFACTOR_v12.md  RELEASE_NOTES.md  VERSION_HISTORY.md  bugfix_sn76496_visualization.md  dual_chip_oscilloscope_v15.md  gb_nes_oscilloscope.md  oki_adpcm_oscilloscope.md  opl3_4op_fix.md  opl_oscilloscope_support.md  project_review_v14.md  saa_gb_c6280_nes_oscilloscope.md  scc_oscilloscope_addition.md  scope_chip_registration.md  scope_development_log.md  scope_improvements_v15_r44.md  segapcm_oscilloscope_enable.md  v14_improvements_summary.md  v14_update_summary.md  vgm_player_v14.md  vgm_visualization_fixes_v14.md  ym2163_hardware_deep_dive.md  ym2413_oscilloscope_implementation.md
legacy/: build_v11.sh  build_v12.sh  build_v13.sh  build_v14.sh  build_v15.sh  ym2163_piano_gui_v11.cpp
libvgm-modizer/: imgui.ini
libvgm-modizer/emu/: SoundDevs.h
libvgm-modizer/emu/cores/: ModizerConstants.h  ModizerVoicesData.h  Ootake_PSG.c  adlibemu_opl_inc.c  ay8910.c  ay8910_scope.c  c6280_mame.c  emu2149.c  emu2413.c  fmopl.c  fmopn.c  gb.c  k051649.c  nesintf.c  np_nes_apu.c  np_nes_dmc.c  okim6258.c  okim6295.c  pwm.c  saa1099_vb.c  scope_chip_reg.c  segapcm.c  sn76496.c  ws_audio.c  ym2151.c  ymf262.c
libvgm-player/: Makefile  libvgm日志.txt  player.cpp  runplay.bat  simon.vgm
libvgm-player/audio/: AudDrv_WASAPI.cpp  AudioStream.c
libvgm-player/emu/cores/: 2151intf.c  2151intf.h  ym2151.c
libvgm-player/player/: vgmplayer.cpp  vgmplayer.hpp
src/: app_icon.rc  chip_control.cpp  chip_control.h  chip_window_ym2163.cpp  chip_window_ym2163.h  gigatron_window.cpp  gui_renderer.cpp  gui_renderer.h  gui_renderer_impl.cpp  main.cpp  midi_player.cpp  modizer_viz.cpp  modizer_viz.h  opl3_renderer.cpp  opl3_renderer.h  opl3_window.cpp  sn76489_window.cpp  sn76489_window.h  spfm_manager.cpp  spfm_manager.h  spfm_window.cpp  spfm_window.h  vgm_parser.cpp  vgm_window.cpp  vgm_window.h  ym2413_window.cpp
src/core/: config_manager.cpp  config_manager.h  gui_renderer.cpp  gui_renderer_impl.cpp  vgm_sync.cpp  vgm_sync.h  window_interface.h
src/gigatron/: gigatron_emu.c  gigatron_emu.h
src/midi/: midi_player.cpp  midi_player.h
src/sn76489/: sn76489.h  spfm.h  spfm_lite.c
src/windows/ay8910/: ay8910_window.cpp  ay8910_window.h
src/windows/gigatron/: audio_output.h  fnum_table.h  gigatron_emu.c  gigatron_window.cpp  gigatron_window.h  winmm.c  winmm.h
src/windows/opl3/: opl3_renderer.cpp  opl3_window.cpp  opl3_window.h
src/windows/sn76489/: error.h  sn76489_window.cpp  sn76489_window.h  spfm_lite.c
src/windows/spfm/: spfm_manager.cpp  spfm_manager.h  spfm_window.cpp
src/windows/vgm/: vgm_parser.h  vgm_window.cpp
src/windows/ym2163/: chip_control.cpp  chip_control.h  chip_window_ym2163.cpp  chip_window_ym2163.h
src/windows/ym2413/: ym2413_window.cpp  ym2413_window.h
tools/: saa1099_dump.cpp  sn76489_dump.cpp
vgms/Shining_Crystal_(MSX2+)/: 01 Opening.vgm  02 Town.vgm  03 Field.vgm  04 Cave.vgm  05 Battle.vgm  06 Castle.vgm  07 Spring Water.vgm  08 Ruins.vgm  09 Reminiscence.vgm  10 Enemy Castle.vgm  11 Final Battle.vgm  12 Credits.vgm  Shining Crystal.m3u  Shining Crystal.txt
vgms/kssorg/: KSSORG01.vgm  KSSORG02.vgm  KSSORG03.vgm  KSSORG04.vgm
